--- a/src/Pipfile
+++ b/src/Pipfile
@@ -21,6 +21,25 @@ Werkzeug = "==1.0.0"
 python-dateutil = "==2.8.1"
 Flask-Compress = "==1.4.0"
 gevent = "==1.3.6"
+beautifulsoup4 = "*"
+certifi = "==2019.11.28"
+chardet = "==3.0.4"
+click = "==7.1.1"
+future = "==0.18.2"
+idna = "==2.9"
+itsdangerous = "==1.1.0"
+kiwisolver = "==1.1.0"
+matplotlib = "==3.2.1"
+pyparsing = "==2.4.6"
+redis = "==3.5.3"
+requests = "==2.23.0"
+retrying = "==1.3.3"
+urllib3 = "==1.25.8"
+COVID19Py = "==0.3.0"
+Cycler = "==0.10.0"
+Flask-Caching = "*"
+Jinja2 = "==2.11.1"
+MarkupSafe = "==1.1.1"
 
 [dev-packages]
 
