--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,44 +2,35 @@ gunicorn
 dash==1.10.0
 numpy
 pandas
-gevent==1.3.6
 scipy==1.3.3
-dash_bootstrap_components
-
-# beautifulsoup4
-
-# certifi==2019.11.28
-# chardet==3.0.4
-# click==7.1.1
-# COVID19Py==0.3.0
-# cycler==0.10.0
-
+dash-bootstrap-components
 dash-core-components==1.9.0
 dash-html-components==1.0.3
 dash-renderer==1.3.0
 dash-table==4.6.2
-Flask==1.1.1
-Flask-Compress==1.4.0
-# Flask-Caching
-# future==0.18.2
-
-# idna==2.9
-# itsdangerous==1.1.0
-# Jinja2==2.11.1
-# kiwisolver==1.1.0
-# MarkupSafe==1.1.1
-# matplotlib==3.2.1
-
 plotly==4.5.4
-# pyparsing==2.4.6
-python-dateutil==2.8.1
-# redis==3.5.3
-# requests==2.23.0
-# retrying==1.3.3
 six==1.14.0
-# urllib3==1.25.8
+Flask==1.1.1
 Werkzeug==1.0.0
-
-pip==20.1.1
-setuptools==47.1.1
-wheel==0.34.2
+python-dateutil==2.8.1
+Flask-Compress==1.4.0
+gevent==1.3.6
+beautifulsoup4
+certifi==2019.11.28
+chardet==3.0.4
+click==7.1.1
+future==0.18.2
+idna==2.9
+itsdangerous==1.1.0
+kiwisolver==1.1.0
+matplotlib==3.2.1
+pyparsing==2.4.6
+redis==3.5.3
+requests==2.23.0
+retrying==1.3.3
+urllib3==1.25.8
+COVID19Py==0.3.0
+Cycler==0.10.0
+Flask-Caching
+Jinja2==2.11.1
+MarkupSafe==1.1.1
