--- a/requirements.txt
+++ b/requirements.txt
@@ -1,257 +1,23 @@
-absl-py==0.8.1
-alabaster==0.7.11
-anaconda-client==1.7.2+6.g6d462d5
-anaconda-navigator==1.9.2
-anaconda-project==0.8.2
-appdirs==1.4.3
-asn1crypto==0.24.0
-astor==0.8.0
-astroid==2.0.4
-astropy==3.0.4
-atomicwrites==1.2.1
-attrs==18.2.0
-Automat==0.7.0
-Babel==2.6.0
-backcall==0.1.0
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.6.3
-bitarray==0.8.3
-bkcharts==0.2
-blaze==0.11.3
-bleach==2.1.4
-bokeh==0.13.0
-boto==2.49.0
-Bottleneck==1.2.1
-certifi==2019.11.28
-cffi==1.11.5
-chardet==3.0.4
-click==7.1.1
-cloudinary==1.20.0
-cloudpickle==0.5.5
-clyent==1.2.2
-colorama==0.3.9
-colour==0.1.5
-comtypes==1.1.7
-conda==4.8.3
-conda-build==3.15.1
-conda-package-handling==1.6.0
-constantly==15.1.0
-contextlib2==0.5.5
-COVID19Py==0.3.0
-cryptography==2.8
-cycler==0.10.0
-Cython==0.28.5
-cytoolz==0.9.0.1
-dash==1.10.0
-dash-bootstrap-components==0.9.1
-dash-core-components==1.9.0
-dash-daq==0.4.0
-dash-html-components==1.0.3
-dash-katex==0.0.1
-dash-renderer==1.3.0
-dash-table==4.6.2
-dask==0.19.1
-datashape==0.5.4
-decorator==4.3.0
-defusedxml==0.5.0
-descartes==1.1.0
-distributed==1.23.1
-docutils==0.14
-Elderfield-2017-Fungicide-Model==1.0
-entrypoints==0.2.3
-et-xmlfile==1.0.1
-fastcache==1.0.2
-filelock==3.0.8
-Flask==1.1.1
-Flask-Cache==0.13.1
-Flask-Caching==1.9.0
-Flask-Compress==1.4.0
-Flask-Cors==3.0.6
+gunicorn
+Brotli==1.0.9
+click==8.0.1
+colorama==0.4.4
+dash==1.21.0
+dash-bootstrap-components==0.12.2
+dash-core-components==1.17.1
+dash-html-components==1.1.4
+dash-table==4.12.0
+Flask==2.0.1
+Flask-Compress==1.10.1
 future==0.18.2
-gast==0.2.2
-gevent==1.3.6
-gillespy2==1.5.6
-glob2==0.6
-google-pasta==0.1.7
-greenlet==0.4.15
-grpcio==1.24.3
-gunicorn==20.0.4
-h5py==2.8.0
-heapdict==1.0.0
-heroku==0.1.4
-html5lib==1.0.1
-hyperlink==18.0.0
-idesolver==1.0.3
-idna==2.9
-imageio==2.4.1
-imagesize==1.1.0
-importlib-metadata==1.6.1
-incremental==17.5.0
-ipykernel==4.10.0
-ipython==6.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.1
-isort==4.3.4
-itsdangerous==1.1.0
-jdcal==1.4
-jedi==0.12.1
-Jinja2==2.11.1
-joblib==1.0.1
-jsonschema==2.6.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==5.2.0
-jupyter-core==4.4.0
-jupyterlab==0.34.9
-jupyterlab-launcher==0.13.1
-Keras==2.0.3
-keras-applications==1.0.8
-keras-preprocessing==1.1.0
-keyring==13.2.1
-kiwisolver==1.1.0
-lazy-object-proxy==1.3.1
-llvmlite==0.24.0
-locket==0.2.0
-lxml==4.2.5
-Markdown==3.1.1
-MarkupSafe==1.1.1
-matplotlib==3.4.1
-mccabe==0.6.1
-menuinst==1.4.14
-mistune==0.8.3
-mizani==0.6.0
-mkl-fft==1.0.4
-mkl-random==1.0.1
-more-itertools==4.3.0
-mpmath==1.0.0
-msgpack==0.5.6
-multipledispatch==0.6.0
-navigator-updater==0.2.1
-nbconvert==5.4.0
-nbformat==4.4.0
-networkx==2.1
-newrelic==5.10.0.138
-nltk==3.3
-nose==1.3.7
-notebook==5.6.0
-numba==0.39.0
-numexpr==2.6.8
-numpy==1.17.3
-numpydoc==0.8.0
-odo==0.5.1
-olefile==0.46
-opencv-python==4.1.1.26
-openpyxl==2.5.6
-opt-einsum==3.1.0
-packaging==17.1
-palettable==3.3.0
-pandas==1.0.2
-pandocfilters==1.4.2
-parso==0.3.1
-partd==0.3.8
-path.py==11.1.0
-pathlib2==2.3.2
-patsy==0.5.0
-pep8==1.7.1
-pickleshare==0.7.4
-Pillow==8.2.0
-pipenv==2018.11.26
-pkginfo==1.4.2
-plotly==4.5.4
-pluggy==0.13.1
-ply==3.11
-prometheus-client==0.3.1
-prompt-toolkit==1.0.15
-protobuf==3.10.0
-psutil==5.7.0
-py==1.6.0
-pyasn1==0.4.4
-pyasn1-modules==0.2.2
-pycodestyle==2.4.0
-pycosat==0.6.3
-pycparser==2.18
-pycrypto==2.6.1
-pycurl==7.43.0.5
-pyflakes==2.0.0
-Pygments==2.2.0
-pylint==2.1.1
-pyodbc==4.0.24
-pyOpenSSL==18.0.0
-pyparsing==2.4.6
-PySocks==1.6.8
-pytest==3.10.1
-pytest-arraydiff==0.2
-pytest-astropy==0.4.0
-pytest-doctestplus==0.1.3
-pytest-openfiles==0.3.0
-pytest-remotedata==0.3.0
-python-dateutil==2.8.1
-python-dotenv==0.15.0
-pytz==2018.5
-PyWavelets==1.0.0
-pywin32==223
-pywinpty==0.5.4
-PyYAML==3.13
-pyzmq==17.1.2
-QtAwesome==0.4.4
-qtconsole==4.4.1
-QtPy==1.5.0
-redis==3.5.3
-requests==2.23.0
-retrying==1.3.3
-rope==0.11.0
-ruamel-yaml==0.15.46
-scikit-image==0.14.0
-scikit-learn==0.24.2
-scipy==1.6.3
-seaborn==0.9.0
-Send2Trash==1.5.0
-service-identity==17.0.0
-simplegeneric==0.8.1
-singledispatch==3.4.0.3
-six==1.14.0
-sklearn==0.0
-snowballstemmer==1.2.1
-sortedcollections==1.0.1
-sortedcontainers==2.0.5
-Sphinx==1.7.9
-sphinxcontrib-websupport==1.1.0
-spyder==3.3.1
-spyder-kernels==0.2.6
-SQLAlchemy==1.2.11
-statsmodels==0.9.0
-sympy==1.1.1
-tables==3.4.4
-tblib==1.3.2
-tensorboard==2.0.0
-tensorflow==2.0.0
-tensorflow-estimator==2.0.1
-termcolor==1.1.0
-terminado==0.8.1
-testpath==0.3.1
-Theano==1.0.4
-threadpoolctl==2.1.0
-toolz==0.9.0
-tornado==5.1
-tqdm==4.26.0
-traitlets==4.3.2
-Twisted==18.7.0
-unicodecsv==0.14.1
-urllib3==1.25.8
-virtualenv==16.7.7
-virtualenv-clone==0.5.3
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==1.0.0
-widgetsnbextension==3.4.1
-win-inet-pton==1.0.1
-win-unicode-console==0.5
-wincertstore==0.2
-wrapt==1.11.2
-xlrd==1.1.0
-XlsxWriter==1.1.0
-xlwings==0.11.8
-xlwt==1.3.0
-zict==0.1.3
-zipp==3.1.0
-zope.interface==4.5.0
+importlib-metadata==4.6.1
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+numpy==1.21.1
+plotly==5.1.0
+six==1.16.0
+tenacity==8.0.1
+typing-extensions==3.10.0.0
+Werkzeug==2.0.1
+zipp==3.5.0
