--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-gunicorn
 Brotli==1.0.9
 click==8.0.1
 colorama==0.4.4
@@ -10,6 +9,7 @@ dash-table==4.12.0
 Flask==2.0.1
 Flask-Compress==1.10.1
 future==0.18.2
+gunicorn==20.1.0
 importlib-metadata==4.6.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
