--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,11 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 numpy==1.21.1
+pandas==1.1.5
 plotly==5.1.0
+python-dateutil==2.8.2
+pytz==2021.1
+scipy==1.7.0
 six==1.16.0
 tenacity==8.0.1
 typing-extensions==3.10.0.0
